# rzp-amplifier

./: .env.example  .gitignore  .gitmodules  .mcp.json  .rsync-exclude  2025-10-05-amplifier-v2-codespace-chat-part-1.txt  AGENTS.md  CLAUDE.md  DISCOVERIES.md  Makefile  Makefile.monolithic.backup  README.md  pyproject.toml  pytest.ini  ruff.toml
.beads/: amplifier-dev.jsonl
.claude/: AGENTS_CATALOG.md  settings.json
.claude/agents/: AGENT_CREATION_GUIDELINES.md  ambiguity-guardian.md  amplifier-cli-architect.md  analysis-engine.md  animation-choreographer.md  api-contract-designer.md  art-director.md  beads-investigator.md  bug-hunter.md  command-architect.md  component-designer.md  concept-extractor.md  content-researcher.md  contract-spec-author.md  database-architect.md  design-system-architect.md  doc-retcon-specialist.md  documentation-specialist.md  graph-builder.md  insight-synthesizer.md  integration-specialist.md  knowledge-archaeologist.md  layout-architect.md  modular-builder.md  module-intent-architect.md  pattern-emergence.md  performance-optimizer.md  post-task-cleanup.md  responsive-strategist.md  security-guardian.md  skill-architect.md  subagent-architect.md  test-coverage.md  visualization-architect.md  voice-strategist.md  zen-architect.md
.claude/commands/: add-claude-rule.md  commit.md  investigate-beads.md  prime.md
.claude/hooks/: post-tool-use-boundary.py  post-tool-use.sh  pre-tool-use-boundary.py
.claude/tools/: hook_post_tool_use.py  hook_session_setup.py  hook_session_start.py  hook_stop.py  subagent-logger.py
.devcontainer/: POST_SETUP_README.md  devcontainer.json  post-create.sh
.windsurf/workflows/: address-pull-request-comments.md
ai_working/amplifier-v2/: BOOTSTRAP_GUIDE.md  BRANCH_INTEGRATION_GUIDE.md  README.md  SETUP_SCRIPTS_README.md  THINKING_TOOL_DISPLAY_RECOVERY_ANALYSIS.md  amplifier-technical-implementation.md  create-amplifier-dev-zip.sh  exhaustive-writeup.md  freshen-parent.sh  push-parent.sh  setup-all.sh  setup-amplifier-dev.sh
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-context-simple/: pyproject.toml
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-context-simple/amplifier_mod_context_simple/: __init__.py
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-loop-basic/: pyproject.toml
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-loop-basic/amplifier_mod_loop_basic/: __init__.py
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-loop-streaming/: pyproject.toml
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-loop-streaming/amplifier_mod_loop_streaming/: __init__.py
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-provider-anthropic/: pyproject.toml
ai_working/amplifier-v2/amplifier-dev/amplifier-mod-provider-anthropic/amplifier_mod_provider_anthropic/: __init__.py
ai_working/ddd/: code_plan.md  docs_status.md  infrastructure-auth-ansible-plan.md  plan.md
ai_working/ddd_cli/: Makefile  README.md  TESTING_REPORT.md  pyproject.toml
ai_working/ddd_cli/amplifier_ddd/: __init__.py  cli.py  config.py  detect_conflicts.py  generate_report.py  list_docs.py  progress.py  utils.py  verify_retcon.py
ai_working/ddd_cli/tests/: __init__.py  test_cli.py  test_detect_conflicts.py  test_detect_conflicts_extended.py  test_generate_report.py  test_generate_report_extended.py  test_integration.py  test_list_docs.py  test_list_docs_extended.py  test_progress.py  test_progress_extended.py  test_utils.py  test_verify_retcon.py  test_verify_retcon_extended.py
amplifier-next/: AGENTS.md  ARCHITECTURE.md  BUGFIX_REPORT.md  CLAUDE.md  IMPLEMENTATION_REPORT.md  README.md  USAGE_GUIDE.md  dev-config.toml  production-config.toml  test-anthropic-config.toml  test-full-features.toml  test-openai-config.toml  test_anthropic.py  test_openai.py  test_provider_tools.py  test_tools.py
amplifier-next/amplifier/: README.md  default-config.toml  pyproject.toml
amplifier-next/amplifier-cli/: README.md  pyproject.toml
amplifier-next/amplifier-cli/amplifier_cli/: __init__.py  main.py
amplifier-next/amplifier-core/: pyproject.toml
amplifier-next/amplifier-core/amplifier_core/: cli.py  coordinator.py  hooks.py  interfaces.py  loader.py  models.py  testing.py
amplifier-next/amplifier-core/amplifier_core/utils/: __init__.py  config.py
amplifier-next/amplifier-core/tests/: test_session.py
amplifier-next/amplifier-mod-agent-architect/: pyproject.toml
amplifier-next/amplifier-mod-agent-architect/amplifier_mod_agent_architect/: __init__.py
amplifier-next/amplifier-mod-context-persistent/: README.md  pyproject.toml
amplifier-next/amplifier-mod-context-persistent/amplifier_mod_context_persistent/: __init__.py
amplifier-next/amplifier-mod-hooks-backup/: pyproject.toml
amplifier-next/amplifier-mod-hooks-backup/amplifier_mod_hooks_backup/: __init__.py
amplifier-next/amplifier-mod-hooks-logging/: README.md  pyproject.toml
amplifier-next/amplifier-mod-hooks-logging/amplifier_mod_hooks_logging/: __init__.py
amplifier-next/amplifier-mod-provider-mock/: pyproject.toml
amplifier-next/amplifier-mod-provider-mock/amplifier_mod_provider_mock/: __init__.py
amplifier-next/amplifier-mod-provider-openai/: pyproject.toml
amplifier-next/amplifier-mod-provider-openai/amplifier_mod_provider_openai/: __init__.py
amplifier-next/amplifier-mod-tool-bash/: pyproject.toml
amplifier-next/amplifier-mod-tool-bash/amplifier_mod_tool_bash/: __init__.py
amplifier-next/amplifier-mod-tool-filesystem/: pyproject.toml
amplifier-next/amplifier-mod-tool-filesystem/amplifier_mod_tool_filesystem/: __init__.py
amplifier-next/amplifier-mod-tool-search/: README.md  pyproject.toml
amplifier-next/amplifier-mod-tool-search/amplifier_mod_tool_search/: __init__.py  glob.py  grep.py
amplifier-next/amplifier-mod-tool-web/: README.md  pyproject.toml
amplifier-next/amplifier-mod-tool-web/amplifier_mod_tool_web/: __init__.py
amplifier-next/amplifier/docs/: DEVELOPER.md  USER_GUIDE.md
docs/: PROJECT_FILE_STRUCTURE.md  SYNC.md
tests/: TEST_SUMMARY.md
tools/: check_stubs.py  test_memory_extraction.sh
(+186 files in other folders)
