[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-mod-hooks-logging"
version = "1.0.0"
description = "Logging hook module for Amplifier - provides visibility into agent execution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
]

[project.entry-points."amplifier.modules"]
hooks-logging = "amplifier_mod_hooks_logging:mount"
