[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-mod-provider-mock"
version = "1.0.0"
description = "Mock provider for Amplifier testing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
]

[project.entry-points."amplifier.modules"]
provider-mock = "amplifier_mod_provider_mock:mount"
