[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-mod-tool-search"
version = "0.1.0"
description = "Search tools module for Amplifier - grep and glob functionality"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Amplifier Team"},
]
dependencies = [
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
tool-search = "amplifier_mod_tool_search:mount"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long - we use 120 char limit

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ are exports