[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-mod-tool-web"
version = "1.0.0"
description = "Web tools (search and fetch) for Amplifier"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
]

[project.entry-points."amplifier.modules"]
tool-web = "amplifier_mod_tool_web:mount"
