[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-mod-context-simple"
version = "1.0.0"
description = "Simple context manager for Amplifier"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
]

[project.entry-points."amplifier.modules"]
context-simple = "amplifier_mod_context_simple:mount"
