[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-mod-provider-anthropic"
version = "1.0.0"
description = "Anthropic provider module for Amplifier"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
    "anthropic>=0.25.0",
]

[project.entry-points."amplifier.modules"]
provider-anthropic = "amplifier_mod_provider_anthropic:mount"
